tests/toylang/neg/001172_mutation.toylang
program a = { 0 a : bool; } .
